[gd_scene load_steps=4 format=3 uid="uid://dya7jti6tc8a2"]

[ext_resource type="Script" path="res://Scenes/ui/ingame/ui.gd" id="1_fs48s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25uhs"]
bg_color = Color(0, 0, 0, 0.211765)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.12549, 0.12549, 0.12549, 0.815686)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_haur2"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fs48s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer_HUD" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer_HUD"]
layout_mode = 2
size_flags_vertical = 0

[node name="PlayerName" type="Label" parent="Control/MarginContainer/VBoxContainer_HUD/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 4

[node name="VBoxContainer_CHAT" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MessagesMargin" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer_CHAT"]
layout_mode = 2
theme_override_constants/margin_bottom = 6

[node name="MessagesContainer" type="BoxContainer" parent="Control/MarginContainer/VBoxContainer_CHAT/MessagesMargin"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 6
vertical = true

[node name="txtMsg" type="LineEdit" parent="Control/MarginContainer/VBoxContainer_CHAT"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_25uhs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_haur2")
max_length = 255

[node name="lblWait" type="Label" parent="Control/MarginContainer/VBoxContainer_CHAT"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Aperte T para conversar"

[connection signal="text_submitted" from="Control/MarginContainer/VBoxContainer_CHAT/txtMsg" to="." method="_on_txt_msg_text_submitted"]
